ocobjects/gateway.yaml
apiVersion: networking.istio.io/v1beta1
kind: Gateway
metadata:
  name: booksdb-gateway
  namespace: gberekashvili
spec:
  selector:
    istio: ingressgateway
  servers:
    - hosts:
        - booksdb-gateway.apps.osh.devops.tbc
      port:
        name: http
        number: 80
        protocol: HTTP
